--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -10,9 +10,10 @@
     justify-content: space-between;
     align-items: center;
     align-content: center;
+    flex-wrap: wrap;
     background-color: $backgroundMainColor;
 
-    @media screen and (max-width: 820px) {
+    @media screen and (max-width: 760px) {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
