--- a/src/header/burgerNav/BurgerNav.module.scss
+++ b/src/header/burgerNav/BurgerNav.module.scss
@@ -1,40 +1,52 @@
 @import '../../common/styles/sass/variables.scss';
 
 .burgerNav {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
+    width: 100%;
     background-color: antiquewhite;
-
-    a {
-        font-family: 'Poppins', sans-serif;
-        color: $titleColor;
-        font-size: 16px;
-        text-decoration: none;
-        font-weight: 500;
-        padding: 20px 0;
-        line-height: 1.71429;
-        text-align: left;
-        
-        &:hover {
+    position: relative;
+    .burgerNavItems {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        a {
+            font-family: 'Poppins', sans-serif;
+            color: $titleColor;
+            font-size: 16px;
             text-decoration: none;
+            font-weight: 500;
+            padding: 20px 0;
+            line-height: 1.71429;
+            text-align: left;
+            
+            &:hover {
+                text-decoration: none;
+                color: $primeryColor;
+                cursor: pointer;
+            }
+        }
+        .active {
             color: $primeryColor;
-            cursor: pointer;
+        }
+
+        @media screen and (min-width: 420px) {
+            display: none;
         }
     }
-    .active {
-        color: $primeryColor;
+    .burgerBtn {
+        width: 30px;
+        height: 30px;
+        background-color: $primeryColor;
+        position: absolute;
+        top: 10px;
+        right: 0;
     }
+
     .logo {
         height: 55px;
         width: 55px;
     }
-    
-    @media screen and (min-width: 400px) {
-        display: none;
-    }
+
 
 }
