--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -8,7 +8,29 @@
     .skillsContainer {
         flex-direction: column;
         justify-content: flex-start;
-
+        align-items: center;
+    
+        .showDscr {
+            padding-top: 32px;
+            display: flex;
+            flex-direction: column;
+            justify-content:center;
+            align-items: center;
+            & h2 {
+                @include text (20px, 30px, 400, $fontFamilyPoppins, $primeryColor);
+            }
+            .icon {
+                color: $primeryColor;
+                width: 32px;
+                height: 32px;
+                &:hover {
+                    transform: scale(1.2);
+                    transition: 0.3s;
+                    cursor: pointer;
+                }
+            }  
+        }
+       
         .skills {
             /*  font-size: 14px;
             line-height: 1.71429;
@@ -21,8 +43,6 @@
             justify-content: space-between;
             flex-wrap: wrap;
             color: $backgroundDescriptionColor;
-            margin-right: -15px;
-            margin-left: -15px;
             text-align: left;
 
             @media screen and (max-width: 906px) {
